--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,4 +1,7 @@
-%h1 Home
-- @users.each do |user|
-  %p User: #{user.name}
+.container
+  .header
+    %h1 Hungry Kitchen
+  .main.span12
+    Coming Soon
+
 
