--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -2,5 +2,44 @@
 $iconSpritePath: image-path('glyphicons-halflings.png');
 $iconWhiteSpritePath: image-path('glyphicons-halflings-white.png');
 @import "bootstrap";
-body { padding-top: 60px; }
+// body { padding-top: 60px; }
 @import "bootstrap-responsive";
+@import url(http://fonts.googleapis.com/css?family=Oxygen);
+
+$dark_blue:  #304269;
+$med_blue:   #91BED4;
+$light_blue: #D9E8F5;
+$white:      #FFFFFF;
+$orange:     #F26101;
+
+body {
+  background-color: $light_blue;
+}
+
+.container {
+  width: 100%;
+}
+
+.header  {
+  position: relative;
+  margin: 0 0 0 0;
+  padding: 50px;
+  height: auto;
+  background-color: $white;
+
+  h1 {
+    font-family: 'Oxygen', sans-serif;
+    color: $orange;
+  }
+}
+
+
+.main {
+  background: $light_blue;
+  margin: 50px 50px 50px 50px;
+  font-size: 200%;
+  text-align: center;
+  font-family: 'Oxygen', sans-serif;
+}
+
+
