--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,7 +1,10 @@
-.container
-  .header
-    %h1 Hungry Kitchen
-  .main.span12
-    Coming Soon
-
+%header#index_header
+  %a{:href => "index.html"} Hungry Kitchen
+#recipe
+  .wrapper
+    %p
+      %em
+        Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit.
+        <br/><br/>
+        Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit.
 
