--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -4,9 +4,29 @@
   .wrapper
     %p
       %em
-        INGREDIENTS
-        <br/><br/>
-        Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit.
-        <br/><br/>
-        Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit.
+        Hungarian Nut Torta
+    %p
+      INGREDIENTS <br/>
+      2 cups chopped walnuts <br/>
+      1 teaspoon ground cinnamon <br/>
+      3/4 cup white sugar <br/>
+      1/4 cup warm water (110 degrees F/45 degrees C) <br/>
+      1 (.25 ounce) envelope active dry yeast <br/>
+      1 teaspoon white sugar <br/>
+      4 egg yolks <br/>
+      1/2 cup sour cream <br/>
+      1 1/3 cups butter or margarine, softened <br/>
+      4 1/2 cups all-purpose flour <br/>
+      1 (16 ounce) jar apricot preserves <br/>
+      4 egg whites <br/>
+      2/3 cup white sugar <br/><br/>
 
+      DIRECTIONS <br/>
+
+      1. Preheat oven to 350 degrees F (175 degrees C). Grease an 11x17 inch jelly roll pan. Mix together the walnuts, ground cinnamon, and 3/4 cup of sugar in a medium bowl and set aside.<br/>
+      2. In a small bowl, dissolve the yeast and 1 teaspoon sugar in warm water. Let stand until creamy, about 10 minutes. In a large bowl, stir together the yeast mixture, egg yolks, sour cream, and butter. Gradually stir in the flour until the dough becomes too stiff to use a spoon. Use your hand to knead the dough in the bowl until it becomes smooth, about 5 minutes. Divide the dough into three equal parts, form into balls, cover, and set aside to rest for about 15 minutes.<br/>
+      3. Roll one of the balls of dough between 2 sheets of waxed paper to fit the pan. Place the dough in the bottom of the prepared baking pan and spread with 3/4 of the nut mixture. Roll out another ball of dough in the same way, place this over the nut layer in the pan and spread the apricot preserves evenly over the dough. Roll the third ball in the same way and place on top of the layer of preserves.<br/>
+      4. Place the torte in the preheated oven and set the timer for 40 minutes. When the timer goes off, the top of the torte should be golden brown, if not then wait a few minutes. Place the egg whites into a clean glass or metal bowl. Whip the egg whites to soft peaks, then gradually add 2/3 cup sugar while beating the egg whites to stiff peaks. Spread the meringue evenly over the top of the torte and sprinkle with the remaining nut mixture.<br/>
+      5. Bake the meringue-covered torte for an additional 15 minutes. Cool the torte in the pan set on a wire rack. Trim the edges for a cleaner presentation. Serve at room temperature.<br/>
+    #recipe_image
+      %a{:href => "index.html"}
